assets/style/style.css
:root {
  --primary-color: #5ce1e6;
  --light-bg: #f0f0f0;
  --dark-bg: #2e2e2e;
  --dark-btn: #252525;
}

/* SECTION SPECIFIC ITEMS */

.profile-img {
  aspect-ratio: 1/1;
  border: 15px solid white;
  border-radius: 50%;
  max-height: 50vh;
}

.icons {
  font-size: 2.5rem;
}

.social-icon {
  font-size: 1.75rem;
}

.skill-icons {
  font-size: 4.0rem;
}

.position-text {
  font-weight: 600;
  word-wrap: normal;
  font-size: 3rem;
  line-height: 1;
}

.underline {
  border-bottom: 3px solid var(--primary-color);
}

.left-border {
  border-left: 3px solid var(--primary-color);
}

.separation-line {
  border-bottom: 1px solid rgba(53, 53, 53, .50);
}

.nav-bound {
  border-bottom: 1px solid rgba(53, 53, 53, .20);
}

.portfolio-img {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1/1;
  background-size: cover;
  background-position: center;
  cursor: pointer;
}

.portfolio-img:hover .portfolio-img-overlay {
  opacity: 1;
}

.portfolio-img-overlay {
  opacity: 0;
  color: #ffffff;
  background-color: rgba(0, 0, 0, .70);
  backdrop-filter: blur(5px);
  transition: opacity 300ms;
  height: 100%;
  width: 100%;
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: column;
}


.section-title {
  font-size: 2.3rem;
}

.form-control {
  background-color: transparent;
  border: none;
  border-bottom: 2px solid rgba(0, 0, 0, .15);
  border-radius: 0;
  color: #000000;
}

/* SECTION SPECIFIC ITEMS */

/* SECTION MEDIA QUERIES */
@media (min-width: 768px) {
  .position-text {
    font-size: 5rem;
  }
}

/* !SECTION MEDIA QUERIES */

/* SECTION UTILITY CLASSES */
.bg-main {
  background-color: var(--primary-color);
}

.light-bg {
  background-color: var(--light-bg);
}

.dark-bg {
  background-color: var(--dark-bg);
}

.text-main-color {
  color: var(--primary-color);
}

.fullscreen {
  min-height: 100vh;
}

.fullscreen-with-header {
  min-height: calc(100vh - 56px);
}

.poppins-font {
  font-family: 'Poppins', sans-serif;
}

.text-underline {
  text-decoration: underline;
}

/* !SECTION UTILITY CLASSES */


/* SECTION OVERRIDES */
p {
  margin-bottom: 0;
}

.btn {
  border-radius: 0;
}

.btn-dark {
  background-color: var(--dark-btn);
}

a {
  color: var(--dark-btn);
}

/* !SECTION OVERRIDES */

